# data-analysis-platform-airflow-dag

./: .airflowignore  README.md  pyproject.toml  pytest.ini
dags/: etl_market_data_to_dwh_dag.py  forex_data_dag.py  forex_data_dag_dev.py  forex_data_dag_prod.py  hadoop_on_demand.py  index_data_dag.py  index_data_dag_dev.py  index_data_dag_prod.py  stock_data_dag.py  stock_data_dag_dev.py  stock_data_dag_prod.py  tutorial.py  webhdfs_conn_sample.py  yfinance_webhdfs_sample.py
sqls/: create_dwh_dimension.sql  create_dwh_fact.sql  create_raw_forex_ext_table.sql  create_raw_index_ext_table.sql  create_raw_stock_ext_table.sql  insert_fact_market_data_forex.sql  insert_fact_market_data_index.sql  insert_fact_market_data_stock.sql  upsert_dim_date.sql  upsert_dim_instrument_forex.sql  upsert_dim_instrument_index.sql  upsert_dim_instrument_stock.sql
tests/: hoge.py  test_config.py  test_data_utils.py  test_forex_utils.py  test_index_utils.py  test_stock_utils.py
tests/dags/: test_forex_data_dag_dev.py  test_forex_data_dag_prod.py  test_index_data_dag_dev.py  test_index_data_dag_prod.py  test_stock_data_dag_dev.py  test_stock_data_dag_prod.py
utils/: config.py  data_utils.py  forex_utils.py  index_utils.py  stock_utils.py
