[project]
name = "data-analysis-platform-airflow-dag"
version = "0.1.0"
description = ""
authors = [
    {name = "IwasakiYuuki",email = "2445yuuki@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance (>=0.2.55,<0.3.0)",
    "ipython (>=9.0.2,<10.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "xlrd (>=2.0.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
